--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
